#48: Fixed CVE-2023-4043 in test dependency `org.eclipse.parsson:parsson`

--- a/.project-keeper.yml
+++ b/.project-keeper.yml
@@ -4,3 +4,7 @@ sources:
     modules:
       - maven_central
       - integration_tests
+build:
+  exasolDbVersions:
+    - "8.23.1"
+    - "7.1.24"
